--- a/owfont-master/css/owfont-regular.css
+++ b/owfont-master/css/owfont-regular.css
@@ -6,11 +6,11 @@
  * -------------------------- */
 @font-face {
   font-family: 'owfont';
-  src: url('../fonts/owfont-regular.eot?v=1.0.0');
-  src: url('../fonts/owfont-regular.eot?#iefix&v=1.0.0') format('embedded-opentype'),
-	   url('../fonts/owfont-regular.woff') format('woff'),
-	   url('../fonts/owfont-regular.ttf') format('truetype'),
-	   url('../fonts/owfont-regular.svg#owf-regular') format('svg');
+  src: url('../font/owfont-regular.eot?v=1.0.0');
+  src: url('../font/owfont-regular.eot?#iefix&v=1.0.0') format('embedded-opentype'),
+	   url('../font/owfont-regular.woff') format('woff'),
+	   url('../font/owfont-regular.ttf') format('truetype'),
+	   url('../font/owfont-regular.svg#owf-regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -151,10 +151,10 @@
 
 /*   Drizzle - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -    */
 
-/*  light intensity drizzle */
-.owf-300:before,
-.owf-300-d:before,
-.owf-300-n:before {
+/*  light intensity drizzle (was 300)*/
+.owf-1153:before,
+.owf-1153-d:before,
+.owf-1153-n:before {
   content: "\EB8C";
 }
 /*  drizzle */
@@ -358,10 +358,10 @@
 .owf-731-n:before {
   content: "\ED3B";
 }
-/* Fog */
-.owf-741:before,
-.owf-741-d:before,
-.owf-741-n:before {
+/* Fog (was 741) */
+.owf-1135:before,
+.owf-1135-d:before,
+.owf-1135-n:before {
   content: "\ED45";
 }
 /* sand */
